--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <div class="grid"></div>
+    <div id="grid-area" class="container"></div>
     <script src="main.js"></script>
 </body>
 </html>
