--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <button id="new-grid">New Grid</button>
     <div id="grid-area" class="container"></div>
     <script src="main.js"></script>
 </body>
