--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <button id="new-grid">New Grid</button>
+    <div class="button-container">
+        <button id="black">Black</button>
+        <button id="shade">Shade</button>
+        <button id="rainbow">Rainbow</button>
+        <button id="clear">Clear</button>
+    </div>
     <div id="grid-area" class="container"></div>
     <script src="main.js"></script>
 </body>
