--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 
 <body>
+    <h1>Etch-a-Sketch</h1>
     <button id="new-grid">New Grid</button>
     <div class="button-container">
         <button id="black">Black</button>
-        <button id="shade">Shade</button>
         <button id="rainbow">Rainbow</button>
+        <button id="eraser">Eraser</button>
         <button id="clear">Clear</button>
     </div>
-    <div id="grid-area" class="container"></div>
+    <div id="grid-area"></div>
     <script src="main.js"></script>
 </body>
 
